implementato messaggio custom

--- a/la-mia-pizzeria-static/Views/Pizza/Index.cshtml
+++ b/la-mia-pizzeria-static/Views/Pizza/Index.cshtml
@@ -8,8 +8,8 @@
     <p>Via del cimitero n°1</p>
 </div>
 
-<div>
-    <a href="@Url.Action("Create", "Pizza")">Crea Piatto</a>
+<div class="create">
+    <a class="box" href="@Url.Action("Create", "Pizza")">Crea nuova pizza</a>
 </div>
 
 <div class="pizza-section">
