--- a/la-mia-pizzeria-static/wwwroot/css/style.css
+++ b/la-mia-pizzeria-static/wwwroot/css/style.css
@@ -48,6 +48,19 @@ ul li {
 .invisible {
     display:none;
 }
+.create {
+    margin-top:20px;
+    margin-left:50px;
+}
+.box {
+    width: 50px;
+    height: 20px;
+    background-color: green;
+    color: white;
+    text-decoration: none;
+    padding: 10px;
+    border-radius: 10px;
+}
 img {
     width: 400px;
 }
